@@ -1,4 +1,5 @@
 2.2.0:
+- Improved: Product search on stock overview is now fuzzy search (#486)
 - Fixed: App could show old data when page loading was interrupted (#409)
 
 2.1.1:
